--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.spinnerContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    padding: 10;
+    z-index: 2;
+    background-color: rgba(10, 10, 10, 0.3);
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    pointer-events: all;
+}
