Co-authored-by: SBen-IV <SBen-IV@users.noreply.github.com> Co-authored-by: Ezequiel Vilardo <evilardo@fi.uba.ar> Co-authored-by: Ana Gutson <anagutson@users.noreply.github.com>

--- a/web/pages/styles.module.scss
+++ b/web/pages/styles.module.scss
@@ -46,3 +46,13 @@
         transform: scale(1.1);
     }
 }
+
+.buttongBackground{
+    background-color: #6c757d;
+    font-weight: 700;
+    margin-top: 1rem;
+    color: #FFF;
+    border-radius: 5px;
+    height: 70px;
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+}
