--- a/web/pages/styles.module.scss
+++ b/web/pages/styles.module.scss
@@ -56,3 +56,17 @@
     height: 70px;
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
+
+.spinner{
+    color: white;
+}
+
+.loadingText{
+    font-size: 1.875rem; /* 30px */
+    line-height: 2.25rem; /* 36px */
+    padding-top: 2.5rem; /* 40px */
+    padding-bottom: 2.5rem; /* 40px */
+    padding-left: 5rem; /* 80px */
+    padding-right: 5rem; /* 80px */
+    color: white;
+}
