--- a/web/pages/styles.module.scss
+++ b/web/pages/styles.module.scss
@@ -47,7 +47,7 @@
     }
 }
 
-.buttongBackground{
+.buttongBackground {
     background-color: #6c757d;
     font-weight: 700;
     margin-top: 1rem;
@@ -58,32 +58,46 @@
 }
 
 .spinnerContainer {
-    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    z-index: 2;
+    background-color: rgba(3, 0, 0, 0.737);
     top: 0;
     left: 0;
-    background: #666;
-    opacity: 0.8;
-    z-index: 998;
+    bottom: 0;
+    right: 0;
+    pointer-events: all;
+    min-height: 100vh;
     height: 100%;
-    width: 100%;
 }
 
-.spinner{
-    color: white;
-    position: fixed;
-    left: 50%;
-    top: 30%;
-}
-
-.loadingText{
-    font-size: 1.875rem; /* 30px */
-    line-height: 2.25rem; /* 36px */
-    padding-top: 2.5rem; /* 40px */
-    padding-bottom: 2.5rem; /* 40px */
-    padding-left: 5rem; /* 80px */
-    padding-right: 5rem; /* 80px */
+.spinner {
     color: white;
     position: fixed;
     top: 30%;
-    left: 25%;
+}
+
+.loadingText {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    color: white;
+    position: fixed;
+    top: 30%;
+}
+
+.textFieldText {
+    background-color: white !important;
+    margin-top: 15px;
+    border-radius: 0.25rem;
+}
+
+.textFieldTitle {
+    padding: 5px;
 }
