--- a/web/pages/styles.module.scss
+++ b/web/pages/styles.module.scss
@@ -97,7 +97,7 @@
 
 .textFieldText {
     background-color: white !important;
-    margin-top: 15px;
+    margin-top: 1rem;
     border-radius: 0.25rem;
 }
 
