--- a/web/pages/styles.module.scss
+++ b/web/pages/styles.module.scss
@@ -57,33 +57,33 @@
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
-.spinnerContainer {
+.spinnerBackground {
+    background-color: rgba(3, 0, 0, 0.737);
     position: fixed;
     top: 0;
     left: 0;
-    background: #666;
-    opacity: 0.8;
     z-index: 998;
     height: 100%;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.spinner{
-    color: white;
+.spinnerContainer {
     position: fixed;
-    left: 50%;
-    top: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.loadingText{
-    font-size: 1.875rem; /* 30px */
-    line-height: 2.25rem; /* 36px */
+.spinner {
+    color: white;
+}
+
+.loadingText {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
     padding-top: 2.5rem; /* 40px */
-    padding-bottom: 2.5rem; /* 40px */
-    padding-left: 5rem; /* 80px */
-    padding-right: 5rem; /* 80px */
     color: white;
-    position: fixed;
-    top: 30%;
-    left: 25%;
 }
